feat: production deployment config (Railway/Render + Vercel)
- Dockerfile: use eclipse-temurin:21, PORT env var support, longer start-period
- application.yml: server.port=\, jwt.secret=\
- SecurityConfig: CORS origins configurable via ALLOWED_ORIGINS env var
- .env.example: document all backend + frontend env vars